--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "core-js": "^3.39.0",
+    "leaflet": "^1.9.0",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-leaflet": "^4.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "redux": "5.0.1",
